# FirstTry-on-git

./: GitUseLearning.md  README.md  jupter.ipynb  pyproject.toml  requirements.txt  test.py  王若尧 亚利桑那 大语言模型构建仿真环境.md
DeepLearning_MuLi/: pyproject.toml
DeepLearning_MuLi/Chapter1_preliminaries/: Auto_differentiation.ipynb  CNN.ipynb  MLP.ipynb  linear_regression.ipynb  pandas.ipynb  probability theory.ipynb  softmax.ipynb
DeepLearning_MuLi/Chapter2_ObjectDetection/: ObjectDetection.ipynb
DeepLearning_MuLi/chapter3_RecurrentNerualNetwork/: 1_RNN.ipynb  2_DeepRNN.ipynb  3_Attention.ipynb  4_transformer.ipynb
DeepLearning_Start/Chapter4/: train_neuralnet.py
DeepLearning_Start/Chapter5/: buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  two_layer_net.py
DeepLearning_Start/Chapter6/: batch_norm_gradient_check.py  batch_norm_test.py  hyperparameter_optimization.py  optimizer_compare_mnist.py  optimizer_compare_naive.py  overfit_dropout.py  overfit_weight_decay.py  weight_init_compare.py
DeepLearning_Start/Chapter7/: train_convnet.py
DeepLearning_Start/Chapter8/: eval_deepnet.py  train_deepnet.py
DeepLearning_Start/Minist/: cmp.py  load_test.py  minist.py  minist_show.py  neuralnet_minist.py
PythonLearning/: inheritance.py
PythonLearning/PythonLearning_OOP/: 4_addProtection.py  5_inhiretence.py  8_extention.py
PythonLearning/Sec10_ProcessAndThread/: 1_Mutiprocessing.ipynb  2_MutiThread.ipynb  3_ThreadLocal.ipynb  (+2 more)
RainforceLearning/: BC_GroundTruth.py  BehaviorClone.py  GAIL.ipynb  PPO.py  groundtruth.py  test.py
(+90 files in other folders)
